--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@docusaurus/core": "^3.2.1",
     "@docusaurus/preset-classic": "^3.2.1",
     "@docusaurus/theme-mermaid": "^3.2.1",
+    "@easyops-cn/docusaurus-search-local": "^0.40.1",
+    "@kinde-oss/kinde-nodejs-sdk": "^1.2.3",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-dotenv": "^1.0.1",
+    "docusaurus2-dotenv": "^1.4.0",
+    "express": "^4.19.2",
+    "express-openid-connect": "^2.17.1",
+    "firebase": "^10.11.1",
     "mermaid": "^10.9.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
