--- a/package.json
+++ b/package.json
@@ -15,26 +15,28 @@
   },
   "dependencies": {
     "-": "^0.0.1",
-    "@docusaurus/core": "^3.2.1",
-    "@docusaurus/preset-classic": "^3.2.1",
-    "@docusaurus/theme-mermaid": "^3.2.1",
+    "@docusaurus/core": "^3.3.2",
+    "@docusaurus/preset-classic": "^3.3.2",
+    "@docusaurus/theme-mermaid": "^3.3.2",
     "@easyops-cn/docusaurus-search-local": "^0.40.1",
     "@kinde-oss/kinde-nodejs-sdk": "^1.2.3",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "docusaurus-plugin-dotenv": "^1.0.1",
+    "docusaurus-pushfeedback": "^1.0.0",
     "docusaurus2-dotenv": "^1.4.0",
     "express": "^4.19.2",
     "express-openid-connect": "^2.17.1",
     "firebase": "^10.11.1",
     "mermaid": "^10.9.0",
+    "netlify-identity-widget": "^1.9.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.1.1",
-    "@docusaurus/types": "3.1.1"
+    "@docusaurus/module-type-aliases": "^3.3.2",
+    "@docusaurus/types": "^3.3.2"
   },
   "browserslist": {
     "production": [
