--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@docusaurus/core": "^3.3.2",
+    "@docusaurus/plugin-sitemap": "^3.3.2",
     "@docusaurus/preset-classic": "^3.3.2",
     "@docusaurus/theme-mermaid": "^3.3.2",
     "@easyops-cn/docusaurus-search-local": "^0.40.1",
