--- a/package.json
+++ b/package.json
@@ -20,20 +20,27 @@
     "@docusaurus/preset-classic": "^3.3.2",
     "@docusaurus/theme-mermaid": "^3.3.2",
     "@easyops-cn/docusaurus-search-local": "^0.40.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@kinde-oss/kinde-nodejs-sdk": "^1.2.3",
     "@mdx-js/react": "^3.0.0",
+    "@mui/material": "^5.15.20",
+    "@mui/x-data-grid": "^7.7.0",
     "clsx": "^2.0.0",
+    "datatables.net-dt": "^2.0.8",
     "docusaurus-plugin-dotenv": "^1.0.1",
     "docusaurus-pushfeedback": "^1.0.0",
     "docusaurus2-dotenv": "^1.4.0",
     "express": "^4.19.2",
     "express-openid-connect": "^2.17.1",
     "firebase": "^10.11.1",
+    "list.js": "^2.3.1",
     "mermaid": "^10.9.0",
     "netlify-identity-widget": "^1.9.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tabulator-tables": "^6.2.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.3.2",
